# AI-Schedule-Manager

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  0001-fix-Update-deprecated-GitHub-Actions-to-current-vers.patch  Dockerfile.all-in-one  E2E-TESTING-README.md  PROGRESS_REPORT.md  README.md  TEST_COVERAGE_EVALUATION.md  check-dashboard-render.js  check-react-errors.js  comprehensive-error-test.js  debug-dashboard-detailed.js  deploy.sh  docker-compose.prod.yml  docker-compose.tunnel.yml  docker-compose.yml  jest.config.js  package-lock.json  package.json  playwright.config.js  playwright.config.ts  pyproject.toml  run-e2e-tests.sh  start.sh  test-dashboard-fix.js  test-integration.sh  test-logout-and-register.js  test-registration.js  test-results.json  test-results.xml  test-summary.js
.playwright-mcp/: BACKEND_TIMEOUT_FIX_SUMMARY.md  FINAL_BACKEND_STATUS.md  FINAL_SESSION_SUMMARY.md  FINAL_STATUS_REPORT.md  FIXES_TEST_REPORT.md  TIMEOUT_FIX_REPORT.md  USER_WORKFLOWS_TEST_REPORT.md  WORKFLOW_TEST_REPORT.md
backend/: .coverage  .dockerignore  .env.example  .flake8  API_ENDPOINT_LIST.md  ASSIGNMENT_API_DOCUMENTATION.md  ASSIGNMENT_API_SUMMARY.md  CACHING_IMPLEMENTATION.md  DATABASE_OPTIMIZATION_QUICKSTART.md  Dockerfile  PERFORMANCE_SUMMARY.md  README.md  SECURITY_IMPLEMENTATION_REPORT.md  add_csrf_security.py  alembic.ini  coverage.json  demo_security_features.py  init.sql  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-prod.txt  requirements.txt  start.sh  test_search_filter.py
config/: ci-cd-optimization.yml  (+3 more)
(+1726 files in other folders)
